--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,6 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:24.0.0-beta1'
     compile 'com.google.firebase:firebase-database:10.0.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:23.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
