--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ captures/
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+.idea/misc.xml
+.idea/vcs.xml
+.idea/modules.xml
 
 # Keystore files
 *.jks
