--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.jatin.locationtrack"
@@ -22,7 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:24.0.0-beta1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.android.support:design:23.0.1'
 }
